Fix CORS using allowedOriginPatterns